# demo_project

./: main.py  pyproject.toml
.github/workflows/: spellcheck.yml
model_training/: model_trainer.py  run_check.py
