[project]
name = "demo-pet-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pyqt5>=5.15.11",
    "rich>=14.0.0",
    "torch>=2.7.0",
    "torcheval>=0.0.7",
    "torchmetrics>=1.7.3",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
